# rust_transformer

./: .gitignore  Cargo.toml  examples.json  input.json  mock.json  record.json
encode/: Cargo.toml
encode/src/: main.rs
mock_data/: input.json  input_invalid.json  large.json  medium.json  output.json  small.json  small_invalid.json
src/: hello.rs  lambda.rs  lib.rs  main.rs  transformer.rs  v1schema.rs  v2schema.rs
src/kinesis/: kinesis.rs  mod.rs
src/mapper/: mapper.rs
src/utils/: encoder.rs  file_helpers.rs  http_helpers.rs  mod.rs
src/validator/: mod.rs  types.rs  validator.rs
