[package]
name = "rust_transformer"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["kinesis"] }
lambda_runtime = "0.13.0"
# lambda_http = "0.13.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.106", features = ["raw_value"] }
serde_derive = "1.0.188"
base64 = "0.22.1"
tokio = { version = "1", features = ["macros"] }

[[bin]]
name = "lambda"
path = "src/lambda.rs"
